log
Fri 26 Apr 2024 07:10:54 PM UTC: 
 hashmap.c | 72 +++++++++++++++++++++++++++++++++++++++++++++------------------
 1 file changed, 52 insertions(+), 20 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:77:57: error: expected ‘)’ before ‘;’ token
   77 |   map->buckets = (Pair **)calloc(capacity, sizeof(Pair*);
      |                                 ~                       ^
      |                                                         )
hashmap.c:82:14: error: expected ‘;’ before ‘}’ token
   82 |   return map;
      |              ^
      |              ;
   83 | }
      | ~             
hashmap.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
341e385
Fri 26 Apr 2024 07:12:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0146995
Fri 26 Apr 2024 07:22:14 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
94f30e0
Fri 26 Apr 2024 07:30:04 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
78391aa
Fri 26 Apr 2024 07:38:23 PM UTC: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  7|4
total_score: 30/70
f0e620f
